Issue #3210: Ensure stdio handles are closed if CreateProcess fails